styling the form - my way

--- a/notes.css/09.navigation-menus.html
+++ b/notes.css/09.navigation-menus.html
@@ -38,6 +38,8 @@
       font-weight: 600;
     }
 
+
+/* horizontal menu*/
     .navbar {
       list-style: none;
       margin: 0;
@@ -49,7 +51,6 @@
     .navbar li {
       float: left;
       /* margin: 10px 20px; */
-
     }
 
     .navbar li a {
